refactor/test(core): removed non behavioral tests